# syster-py

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.adoc  pixi.toml  pyproject.toml
docs/: index.adoc
docs/explanation/: architecture.adoc  sysml-kerml-primer.adoc
docs/how-to/: extract-symbols.adoc  handle-diagnostics.adoc  incremental-workspace.adoc  parse-files.adoc
docs/reference/: database.adoc  diagnostics.adoc  functions.adoc  hir-symbol.adoc  index.adoc  syntax-file.adoc
docs/tutorials/: getting-started.adoc
python/syster_py/: __init__.py
recipes/: recipe.yaml
src/: lib.rs
