[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "syster-py"
version = "0.1.0"
description = "Python bindings for the syster-base SysML/KerML parser"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["sysml", "kerml", "parser", "modeling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[tool.maturin]
python-source = "python"
module-name = "syster_py._syster"
features = ["pyo3/extension-module"]
